# kibot

./: Cargo.toml
src/: discord.rs  main.rs  user_lister.rs
tests/: full_cycle_tests.rs
