[package]
name = "kibot_tu"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.19.0"
url = "2.4.0"
serenity = "0.11.5"
futures = "0.3.28"
dotenv = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
